# vsm-protocol

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  build.sh  go.mod  go.sum  jitpack.yml  vsm_stealth.conf
.github/workflows/: build.yml
bindings/: c_api.go
cmd/client/: stealth_dial.go
cmd/keygen/: keygen.go
cmd/server/: stealth_run.go
core/protocol/: client.go  message.go  server.go
core/stealth/: identity.go  noise.go  tor.go
core/stealth/session/: manager.go
core/stealth/transport/: dialer.go  inject.go  sniffer.go
examples/client/: main.go
examples/node/: vsm_client.js  vsm_server.js
examples/python/: vsm_client.py  vsm_server.py
examples/server/: main.go
wrappers/cpp/: example.cpp  vsm_protocol.hpp
wrappers/dotnet/: VSMProtocol.cs
wrappers/java/: build.gradle
wrappers/java/src/main/java/vsm/: VSMProtocol.java
wrappers/java/src/vsm/: VSMProtocol.java
wrappers/node/: README.md  index.js  package-lock.json  package.json
wrappers/python/: README.md  __init__.py  pyproject.toml
wrappers/python/vsmprotocol/: __init__.py
wrappers/python/vsmprotocol.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
wrappers/rust/: Cargo.toml  README.md  build.rs
wrappers/rust/src/: main.rs
